syntax = "proto3";

message VideoRequest {
    int32 videoId = 1;
}

message VideoChunkResponse {
    bytes data = 1;
}

service VideoService {
    rpc streamVideo(VideoRequest) returns (stream VideoChunkResponse) {}
}